packages/build/tests/error/clean_stack/fixtures/plugin/plugin.js
module.exports = {
  name: 'netlify-plugin-example',
  onInit() {
    throw new Error('test')
  },
}
